--- a/draft-scenarios/clash/king_of_the_hill_v2.tex
+++ b/draft-scenarios/clash/king_of_the_hill_v2.tex
@@ -1,7 +1,7 @@
 % !TeX spellcheck = en_US
 \addscenariosection{1}{Clash Scenario}{King of the Hill v2}{\images/kingofthehill.png}
 
-\begin{multicols*}{2}
+\begin{multicols}{2}
 
 \textbf{Author:} KABLAMIO \& Cantila
 
@@ -90,13 +90,7 @@ VPs for:
   \item In a 2-Player game when a Player gains \textbf{x} VP for controlling the Hill. That Player also has to distribute \textbf{x} \svg{damage-red} to their Units.
 \end{itemize}
 
-\columnbreak
-
-
-\begin{center}
-  \includegraphics[width=1.0\linewidth]{\maps/king_of_the_hill_v2-2p.png}
-  \captionof{figure}{\textbf{2-PLAYER SCENARIO}}
-\end{center}
+\end{multicols}
 
 \begin{tikzpicture}[overlay, remember picture]
 
@@ -104,23 +98,24 @@ VPs for:
     % Parameters: #1 = x-coordinate, #2 = y-coordinate, #3 = rotation angle
     \begin{scope}[shift={(#1,#2)}, rotate=#3]
       \draw[draw=darkyellow, thick, pattern=north east lines, pattern color=darkyellow]
-        (0:0.38cm) -- (60:0.38cm) -- (120:0.38cm) --
-        (180:0.38cm) -- (240:0.38cm) -- (300:0.38cm) -- cycle;
+        (0:0.44cm) -- (60:0.44cm) -- (120:0.44cm) --
+        (180:0.44cm) -- (240:0.44cm) -- (300:0.44cm) -- cycle;
     \end{scope}
   }
 
 
-  \node at (4.5, -5) {\includegraphics[width=1.0\linewidth]{\maps/king_of_the_hill_v2-3p.png}};
+  \node at (13.5, -5) {\includegraphics[width=0.56\linewidth]{\maps/king_of_the_hill_v2-3p.png}};
 
-  \blocked{4.66}{-3.85}{90}
+  \blocked{13.69}{-3.61}{90}
 
-  \node at (7.73, -3.8) {{{\footnotesize\textbf{\textcolor{red}{C1/C3}}}}};
+  \node at (17.5, -1.5) {\large{{\textbf{\textcolor{darkcandyapplered}{C1/C3}}}}};
 
-  \node at (4.33, -5.48) {{{\tiny{The}}}};
-  \node at (4.33, -5.68) {{{\tiny{Hill}}}};
+  \node at (13.33, -5.53) {{{\footnotesize{The}}}};
+  \node at (13.33, -5.82) {{{\footnotesize{Hill}}}};
 
-  \node at (4.4, -10) {\textbf{3-PLAYER SCENARIO}};
+  \node at (13.4, -10.5) {\textbf{3-PLAYER SCENARIO}};
 
+  \node at (4.6, -3.8) {\includegraphics[width=0.5\linewidth]{\maps/king_of_the_hill_v2-2p.png}};
+  \node at (4.6, -8.5) {\textbf{2-PLAYER SCENARIO}};
 \end{tikzpicture}
 
-\end{multicols*}
