--- a/draft-scenarios/clash/king_of_the_hill.tex
+++ b/draft-scenarios/clash/king_of_the_hill.tex
@@ -44,7 +44,7 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
 The game ends at the end of Round 8.
 
 \subsection*{\MakeUppercase{Victory Points}}
-The player with the most Victory Points (VP) wins (see Tournament Book). players also gain:
+The player with the most Victory Points (VP) wins (see Tournament Book). Players also gain:
 \begin{itemize}
   \item 5VP for the first player flagging ''The Hill''
   \item 2VP at the end of every Round for the player who controls ''The Hill''
