--- a/draft-scenarios/clash/shattered_alliance.tex
+++ b/draft-scenarios/clash/shattered_alliance.tex
@@ -42,8 +42,7 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
 The game ends when one player has defeated all other players' Main Hero once \textit{or} at the end of Round 14.
 
 \subsection*{\MakeUppercase{Victory Points}}
-The player with the most Victory Points (VP) wins.
-In addition to the Tournament Book's ``Scoring Victory Points'' section, players gain VPs for:
+The player with the most Victory Points (VP) wins(see Tournament Book). Players gain:
 
 \begin{itemize}
   \item 1 VP for losing a Combat against another player
