Show URL in footnotes in printable version
Also fix 1 oversized page due to (p. X) and fix numbering of the table footnote

--- a/campaigns/castle_greek_gift.tex
+++ b/campaigns/castle_greek_gift.tex
@@ -6,7 +6,7 @@
 
 \textbf{Author:} Tyson Heckert
 
-\textbf{Source:} \href{https://travelledtales.com}{travelledtales.com}
+\textbf{Source:} \hrefwithoutfootnote{https://travelledtales.com}{travelledtales.com}
 
 \textit{Steadwick is free, but that doesn't mean it is safe.
 Dark powers still roam Erathia, and one now moves its pieces into position.
