--- a/campaigns/castle_sicilian_dragon.tex
+++ b/campaigns/castle_sicilian_dragon.tex
@@ -5,7 +5,7 @@
 
 \textbf{Author:} Tyson Heckert
 
-\textbf{Source:} \href{https://travelledtales.com}{travelledtales.com}
+\textbf{Source:} \hrefwithoutfootnote{https://travelledtales.com}{travelledtales.com}
 
 \textit{Convinced that the only way to save Steadwick is to attack Vhidhax, Catherine powers her small force ahead.
 Following the Archangels to a distant, inhospitable land, she must now navigate her way through.}
