--- a/campaigns/castle_two_knights_defense.tex
+++ b/campaigns/castle_two_knights_defense.tex
@@ -5,7 +5,7 @@
 
 \textbf{Author:} Tyson Heckert
 
-\textbf{Source:} \href{https://travelledtales.com}{travelledtales.com}
+\textbf{Source:} \hrefwithoutfootnote{https://travelledtales.com}{travelledtales.com}
 
 \textit{With Vhidhax's stronghold in her grasp, Catherine needs to discover and halt the necromancer's next move.}
 
