--- a/coops/sentinels.tex
+++ b/coops/sentinels.tex
@@ -193,4 +193,5 @@ One of your Towns is captured, or a Main Hero is defeated in a battle (retreat d
 
 \vspace*{\fill}
 
-\footnotetext[1]{Always 1 Unit of Azure Dragons (starting Units of Boss Army). The rest is random\label{azure}.}
+\stepcounter{footnote}
+\footnotetext{Always 1 Unit of Azure Dragons (starting Units of Boss Army). The rest is random\label{azure}.}
