--- a/main_cs.tex
+++ b/main_cs.tex
@@ -22,7 +22,7 @@
 \newcommand{\versionwarning}{Toto je nepublikovaná verze vyrobená z GitHub commitu}
 
 \newcommand{\intro}{
-  Toto je komunitní projekt, který má \href{\repourl}{GitHub repozitář}.
+  Toto je komunitní projekt, který má \hrefwithoutfootnote{\repourl}{GitHub repozitář}.
   Všichni jsou vítáni, aby přispívali novými scénáři, prováděli změny a opravovali chyby.
 }
 \newcommand{\pageshorthand}{p.}
