--- a/main_de.tex
+++ b/main_de.tex
@@ -19,7 +19,7 @@
 \newcommand{\versionwarning}{Dies ist eine unveröffentlichte Version auf GitHub}
 
 \newcommand{\intro}{
-    Dies ist ein Gemeinschaft-Projekt, erreichbar über \href{\repourl}{GitHub repository}.
+    Dies ist ein Gemeinschaft-Projekt, erreichbar über \hrefwithoutfootnote{\repourl}{GitHub repository}.
     Jeder ist dazu eingeladen sich zu beteiligen, Veränderungen vorzunehmen und Fehler zu korrigieren.
 }
 \newcommand{\pageshorthand}{S.}
