--- a/sections/what_to_play.tex
+++ b/sections/what_to_play.tex
@@ -27,6 +27,10 @@ For information regarding your play time, strategizing, and custom rules, checko
 
 \end{multicols}
 
+\iftoggle{printable}{
+  \enlargethispage{2\baselineskip}
+}{}
+
 \includegraphics[width=\linewidth]{\art/enchanter.jpg}
 
 \vspace*{-1em}
