--- a/main_en.tex
+++ b/main_en.tex
@@ -19,7 +19,7 @@
 \newcommand{\versionwarning}{This is an unreleased version built on GitHub from commit}
 
 \newcommand{\intro}{
-  This is a community-driven project, which has a \href{\repourl}{GitHub repository}.
+  This is a community-driven project, which has a \hrefwithoutfootnote{\repourl}{GitHub repository}.
   Everyone is welcome to contribute Scenarios, make changes, and fix errors.
 }
 \newcommand{\pageshorthand}{p.}
