--- a/main_fr.tex
+++ b/main_fr.tex
@@ -20,7 +20,7 @@
 \newcommand{\versionwarning}{Ceci est une version non-éditée créée sur GitHub à partir du commit}
 
 \newcommand{\intro}{
-  Ceci est un projet communautaire doté d'un \href{\repourl}{dépôt GitHub}.
+  Ceci est un projet communautaire doté d'un \hrefwithoutfootnote{\repourl}{dépôt GitHub}.
   Vous êtes tous invités à apporter vos contributions, modifications, corrections et traductions.
 }
 \newcommand{\pageshorthand}{p.}
