--- a/main_pl.tex
+++ b/main_pl.tex
@@ -18,7 +18,7 @@
 \newcommand{\versionwarning}{To jest nieopublikowana wersja zbudowana na GitHubie z commita}
 
 \newcommand{\intro}{
-  Niniejszy projekt jest tworzony przez społeczność oraz ma swoje \href{\repourl}{repozytorium na GitHubie}.
+  Niniejszy projekt jest tworzony przez społeczność oraz ma swoje \hrefwithoutfootnote{\repourl}{repozytorium na GitHubie}.
   Dodawanie nowych scenariuszy, wprowadzanie zmian oraz poprawki są mile widziane.
 }
 \newcommand{\pageshorthand}{p.}
