--- a/translations/castle_greek_gift.tex/pl.po
+++ b/translations/castle_greek_gift.tex/pl.po
@@ -153,12 +153,12 @@ msgstr ""
 #. type: multicols*
 #: campaigns/castle_greek_gift.tex:10 campaigns/castle_sicilian_dragon.tex:9
 #: campaigns/castle_two_knights_defense.tex:9
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "\\textbf{Source:} \\hrefwithoutfootnote{https://travelledtales.com}{travelledtales.com}\n"
 "\n"
 msgstr ""
-"\\textbf{Źródło:} \\href{https://travelledtales.com}{travelledtales.com}\n"
+"\\textbf{Źródło:} \\hrefwithoutfootnote{https://travelledtales.com}{travelledtales.com}\n"
 "\n"
 
 #. type: multicols*
