Show URL in footnotes in printable version (#216)
Co-authored-by: qwrtln <qwrtln@users.noreply.github.com>
Co-authored-by: Andrzej Wiącek <andrzej.wiacek@qwrtln.nl>

--- a/translations/castle_greek_gift.tex/pl.po
+++ b/translations/castle_greek_gift.tex/pl.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2025-04-01 12:55+0000\n"
+"POT-Creation-Date: 2025-04-14 07:17+0100\n"
 "PO-Revision-Date: 2025-01-22 14:01+0000\n"
 "Last-Translator: Damian Sobkowiak <sopek1996@gmail.com>\n"
 "Language-Team: Polish <https://hosted.weblate.org/projects/homm3bg-fan-made-"
@@ -155,10 +155,10 @@ msgstr ""
 #: campaigns/castle_two_knights_defense.tex:9
 #, no-wrap
 msgid ""
-"\\textbf{Source:} \\href{https://travelledtales.com}{travelledtales.com}\n"
+"\\textbf{Source:} \\hrefwithoutfootnote{https://travelledtales.com}{travelledtales.com}\n"
 "\n"
 msgstr ""
-"\\textbf{Źródło:} \\href{https://travelledtales.com}{travelledtales.com}\n"
+"\\textbf{Źródło:} \\hrefwithoutfootnote{https://travelledtales.com}{travelledtales.com}\n"
 "\n"
 
 #. type: multicols*
