--- a/draft-scenarios/clash/king_of_the_hill_v2.tex
+++ b/draft-scenarios/clash/king_of_the_hill_v2.tex
@@ -103,10 +103,11 @@ VPs for:
     \end{scope}
   }
 
-
   \node at (13.5, -5) {\includegraphics[width=0.56\linewidth]{\maps/king_of_the_hill_v2-3p.png}};
 
-  \blocked{13.69}{-3.61}{90}
+  \blocked{13.71}{-3.62}{90}
+  \blocked{11.28}{-6.39}{90}
+  \blocked{14.91}{-7.09}{90}
 
   \node at (17.5, -1.5) {\large{{\textbf{\textcolor{darkcandyapplered}{C1/C3}}}}};
 
@@ -115,7 +116,16 @@ VPs for:
 
   \node at (13.4, -10.5) {\textbf{3-PLAYER SCENARIO}};
 
-  \node at (4.6, -3.8) {\includegraphics[width=0.5\linewidth]{\maps/king_of_the_hill_v2-2p.png}};
-  \node at (4.6, -8.5) {\textbf{2-PLAYER SCENARIO}};
+  \node at (4.6, -3.8) {\includegraphics[width=0.54\linewidth]{\maps/king_of_the_hill_v2-2p.png}};
+  
+  \blocked{6.67}{-2.75}{90}
+  \blocked{2.53}{-4.1}{90}
+  
+  \node at (6.8, -6.4) {\large{{\textbf{\textcolor{darkcandyapplered}{C1/C3}}}}};
+  
+  \node at (4.60, -3.28) {{{\footnotesize{The}}}};
+  \node at (4.60, -3.57) {{{\footnotesize{Hill}}}};
+  
+  \node at (4.6, -9.0) {\textbf{2-PLAYER SCENARIO}};
 \end{tikzpicture}
 
