Deduplicate metadata.tex

--- a/draft-scenarios/drafts.tex
+++ b/draft-scenarios/drafts.tex
@@ -16,6 +16,7 @@
   Everyone is welcome to contribute Scenarios, make changes, and fix errors.
 }
 \newcommand{\pageshorthand}{p.}
+\newcommand{\documenttitle}{Heroes of Might \& Magic III Fan-Made Draft Scenarios}
 
 \newcommand{\qrgithub}{Scan to open \textbf{GitHub} repository.}
 
