--- a/main_cs.tex
+++ b/main_cs.tex
@@ -20,6 +20,7 @@
 \newcommand{\authortext}{V komunitním vydání}
 \newcommand{\versionlabel}{Verze}
 \newcommand{\versionwarning}{Toto je nepublikovaná verze vyrobená z GitHub commitu}
+\newcommand{\documenttitle}{Heroes of Might \& Magic III Fan-Made Mission Book}
 
 \newcommand{\intro}{
   Toto je komunitní projekt, který má \hrefwithoutfootnote{\repourl}{GitHub repozitář}.
