--- a/main_de.tex
+++ b/main_de.tex
@@ -17,6 +17,7 @@
 \newcommand{\authortext}{Von der Gemeinschaft}
 \newcommand{\versionlabel}{Version}
 \newcommand{\versionwarning}{Dies ist eine unveröffentlichte Version auf GitHub}
+\newcommand{\documenttitle}{Heroes of Might \& Magic III Fan-Made Mission Book}
 
 \newcommand{\intro}{
     Dies ist ein Gemeinschaft-Projekt, erreichbar über \hrefwithoutfootnote{\repourl}{GitHub repository}.
