--- a/main_fr.tex
+++ b/main_fr.tex
@@ -18,6 +18,7 @@
 \newcommand{\authortext}{Par la communauté}
 \newcommand{\versionlabel}{Version}
 \newcommand{\versionwarning}{Ceci est une version non-éditée créée sur GitHub à partir du commit}
+\newcommand{\documenttitle}{Heroes of Might \& Magic III Fan-Made Mission Book}
 
 \newcommand{\intro}{
   Ceci est un projet communautaire doté d'un \hrefwithoutfootnote{\repourl}{dépôt GitHub}.
