--- a/main_en.tex
+++ b/main_en.tex
@@ -17,6 +17,7 @@
 \newcommand{\authortext}{By The Community}
 \newcommand{\versionlabel}{Version}
 \newcommand{\versionwarning}{This is an unreleased version built on GitHub from commit}
+\newcommand{\documenttitle}{Heroes of Might \& Magic III Fan-Made Mission Book}
 
 \newcommand{\intro}{
   This is a community-driven project, which has a \hrefwithoutfootnote{\repourl}{GitHub repository}.
