--- a/main_pl.tex
+++ b/main_pl.tex
@@ -16,6 +16,7 @@
 \newcommand{\authortext}{W Wydaniu Społeczności}
 \newcommand{\versionlabel}{Wersja}
 \newcommand{\versionwarning}{To jest nieopublikowana wersja zbudowana na GitHubie z commita}
+\newcommand{\documenttitle}{Heroes of Might \& Magic III Fanowska Księga Misji}
 
 \newcommand{\intro}{
   Niniejszy projekt jest tworzony przez społeczność oraz ma swoje \hrefwithoutfootnote{\repourl}{repozytorium na GitHubie}.
