--- a/draft-scenarios/clash/shattered_alliance.tex
+++ b/draft-scenarios/clash/shattered_alliance.tex
@@ -63,7 +63,7 @@ The player with the most Victory Points (VP) wins(see Tournament Book). Players 
   \item[\textbf{\nth{8}}] \textbf{Round:} Each player may remove up to 5 Black Cubes from the map.
   \item[\textbf{\nth{9}}] \textbf{Round:} Player(s) whose Main Hero has the least \svg{experience}, roll 2 \svg{resource}.
   \item[\textbf{\nth{10}}] \textbf{Round:} All players may recruit a Secondary Hero for free.
-  \item[\textbf{\nth{12}}] \textbf{Round:} Remove all Black Cubes from all locations except Learning Stones.
+  \item[\textbf{\nth{12}}] \textbf{Round:} Remove all Black Cubes.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional Rules}}
@@ -75,7 +75,7 @@ The player with the most Victory Points (VP) wins(see Tournament Book). Players 
   \item \textbf{Grail Field:} Gain the Grail Token.
   \item If you start a turn with the Grail Token, gain +1 \svg{morale_positive} \textit{and} 5 \svg{gold}. If a Hero with the Grail Token is defeated, the Grail Token is given to the winner of that Combat.
   \item If a Hero with the Grail Token teleports, the Grail Token is dropped to that Field first.
-  \item \textbf{Level VII Settlement:} You may Reinforce \textbf{and} increase income. %Gain both first player rewards.
+  \item \textbf{Level VII Settlement:} You may Reinforce \textbf{and} increase income.
   \item Level VII Neutral Combats cannot be skipped and grants the player +1 \svg{morale_positive}.
   \item When a Unit is attacked but suffers no \svg{damage-red}, it gains a \href{https://archon-studio.com/files/manuals/homm/HoMM-Stronghold-Mission-Book-Beta_EN.pdf}{Corrosion} token. Remove it, when that Unit takes \svg{damage-red}.
 \item Players do not have to pay \svg{gold} after losing a Combat against another player.
