--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -123,6 +123,11 @@ After visiting a Dragon Utopia, roll an Attack Die:
 
 \end{multicols*}
 
+\begin{tikzpicture}[remember picture, overlay]
+  \node(bg)[anchor=center, yshift=37em, opacity=0.07] at (current page.south) {
+    \includegraphics[width=1.25\paperwidth, keepaspectratio]{\art/orb_of_tempestuous_fire.png}
+  };
+\end{tikzpicture}
 \begin{tikzpicture}[overlay]
   \centering
   \node at (4, -4) {\includegraphics[scale=0.2]{\maps/dragon-valley-2p.png}};
@@ -132,5 +137,5 @@ After visiting a Dragon Utopia, roll an Attack Die:
   \node at (4.5, -15) {\includegraphics[scale=0.175]{\maps/dragon-valley-4p.png}};
   \node at (4.5, -20) {\footnotesize{\textbf{\MakeUppercase{4-PLAYER SCENARIO}}}};.
   \node at (14, -15) {\includegraphics[scale=0.185]{\maps/dragon-valley-4p-short.png}};
-  \node at (14, -20) {\footnotesize{\textbf{\MakeUppercase{4-PLAYER 9 ROUND SCENARIO}}}};
+  \node at (14, -20) {\footnotesize{\textbf{\MakeUppercase{4-PLAYER 9-ROUND SCENARIO}}}};
 \end{tikzpicture}
