--- a/draft-scenarios/clash/secret_bomb_stash.tex
+++ b/draft-scenarios/clash/secret_bomb_stash.tex
@@ -144,13 +144,16 @@ You can track VPs by collecting Faction Cubes of your opponent's color or using 
 \newpage
 
 \begin{tikzpicture}[overlay]
+  \node(bg)[opacity=0.1] at (9, -10) {
+    \includegraphics[width=1.1\paperwidth, keepaspectratio]{\art/implosion.png}
+  };
   \centering
-  \node at (4.5, -4) {\includegraphics[scale=0.2]{\maps/secret-bomb-stash-2p.png}};
+  \node at (4.5, -4) {\includegraphics[scale=0.25]{\maps/secret-bomb-stash-2p.png}};
   \node at (4.5, -8) {\footnotesize{\textbf{\MakeUppercase{2-PLAYER SCENARIO}}}};
-  \node at (13.5, -4) {\includegraphics[scale=0.2]{\maps/secret-bomb-stash-3p.png}};
-  \node at (13.5, -9) {\footnotesize{\textbf{\MakeUppercase{3-PLAYER SCENARIO}}}};
-  \node at (4, -17) {\includegraphics[scale=0.2]{\maps/secret-bomb-stash-4p.png}};
-  \node at (5.5, -21.5) {\footnotesize{\textbf{\MakeUppercase{4-PLAYER SCENARIO}}}};
-  \node at (13, -16) {\includegraphics[scale=0.2]{\maps/secret-bomb-stash-6p.png}};
+  \node at (13.5, -4) {\includegraphics[scale=0.25]{\maps/secret-bomb-stash-3p.png}};
+  \node at (13, -9) {\footnotesize{\textbf{\MakeUppercase{3-PLAYER SCENARIO}}}};
+  \node at (4, -17) {\includegraphics[scale=0.25]{\maps/secret-bomb-stash-4p.png}};
+  \node at (4.5, -21.5) {\footnotesize{\textbf{\MakeUppercase{4-PLAYER SCENARIO}}}};
+  \node at (13, -16) {\includegraphics[scale=0.25]{\maps/secret-bomb-stash-6p.png}};
   \node at (13, -21.5) {\footnotesize{\textbf{\MakeUppercase{6-PLAYER SCENARIO}}}};
 \end{tikzpicture}
