--- a/draft-scenarios/clash/treasure_island.tex
+++ b/draft-scenarios/clash/treasure_island.tex
@@ -90,30 +90,21 @@ During this Scenario:
   \item If a Player captures an Enemy Player's Starting Town, treat it as a Settlement; you may gain the same bonus as capturing a Settlement, but may not use the Walls, Gate, or Arrow Tower Cards if defending that Field.
 \end{itemize}
 
-\begin{center}
-  \vfill
-  \includegraphics[width=0.8\linewidth]{\maps/TreasureIsland_2p.png}
-  \captionof{figure}{\textbf{2-PLAYER SCENARIO}}
-  \vfill
-  \includegraphics[width=\linewidth]{\maps/TreasureIsland_3p.png}
-  \captionof{figure}{\textbf{3-PLAYER SCENARIO}}
-  \vfill
-\end{center}
+\vspace*{\fill}
+
+\framedimage[\linewidth]{\art/arrow_tower_short.jpg}
 
 \end{multicols*}
 
-For 4 or more players, add more islands.
-See 6-player example:
-
 \begin{tikzpicture}[remember picture, overlay]
-  \node(bg)[anchor=center, yshift=37em, opacity=0.19] at (current page.south) {
-    \includegraphics[width=0.95\paperwidth, keepaspectratio]{\art/orb_of_tempestuous_fire.png}
+  \node(bg)[opacity=0.07] at (9, -12) {
+    \includegraphics[width=0.9\paperwidth, keepaspectratio]{\art/scholar.png}
   };
 \end{tikzpicture}
 
 \begin{center}
   \vfill
   \includegraphics[width=\linewidth]{\maps/TreasureIsland_6p.png}
-  \captionof{figure}{\textbf{6-PLAYER SCENARIO}}
+  \captionof{figure}{\textbf{2+ PLAYER SCENARIO}}
   \vfill
 \end{center}
