--- a/draft-scenarios/clash/astral_run.tex
+++ b/draft-scenarios/clash/astral_run.tex
@@ -72,8 +72,8 @@ In addition to the Tournament Book's ``Scoring Victory Points'' section, players
 
 \subsection*{\MakeUppercase{Additional Rules}}
 \begin{itemize}
-  \item \textbf{Sanctuary:} Gain a \svg{morale_positive} token and draw 1 Card. \textit{Visitable once per faction}.
-  \item \textbf{Obelisk:} Guarded by Level VI Neutrals. Roll one \svg{resource} and draw one Card. \textit{Visitable once per faction}.
+  \item \textbf{Sanctuary:} Gain a \svg{morale_positive} token and draw 1 Card. \textit{Visitable once per Faction}.
+  \item \textbf{Obelisk:} Guarded by Level VI Neutrals. Roll one \svg{resource} and draw one Card. \textit{Visitable once per Faction}.
   \item Blocked Field adjacent to Obelisk is a two-way Astral Gate and becomes active after visiting the Obelisk.
   \item Astral Gates cannot be entered from a different Map Tile. When entering an Astral Gate, that Hero is teleported to the mirrored Astral Gate on the Map and arrives on an adjacent Field.
   \item A defeated Main Hero may Empower one Defense Statistic Card from their M\&M Deck.
