--- a/draft-scenarios/clash/king_of_the_hill.tex
+++ b/draft-scenarios/clash/king_of_the_hill.tex
@@ -84,19 +84,19 @@ The player with the most Victory Points (VP) wins (see Tournament Book). Players
     & \lightcell[1.4]{Dense Fog – All Ranged Units gain disadvantage.}\\
   \darkcell[1.4]{-1/0}
     & \lightcell[1.4]{Raining Ash – All \svg{unit_flying-table} Units gain -2 \svg{initiative-table}.}\\
-  \darkcell[1.4]{0/-1}
-    & \lightcell[1.4]{Sinking Mud – All \svg{unit_ground-table} Units move one space less.}\\
   \darkcell[1.4]{-1/+1}
     & \lightcell[1.4]{Scorching Earth – All \silver\ and \golden Units start Combat with 1 \svg{damage-table}.}\\
+  \darkcell[1.4]{0/-1}
+    & \lightcell[1.4]{Sinking Mud – All \svg{unit_ground-table} Units move one space less.}\\
   \darkcell[1.4]{0/0}
     & \lightcell[1.4]{Clear Skies – No effect.}\\
-  \darkcell[1.8]{+1/-1}
-    & \lightcell[1.8]{Fey Trickery – Players Activate their Units in ascending order of Unit Initiative.}\\
   \darkcell[1.4]{0/+1}
     & \lightcell[1.4]{Rocky Terrain – All Ground Units gain \svg{defense_yellow} Token.}\\
+  \darkcell[1.8]{+1/-1}
+    & \lightcell[1.8]{Fey Trickery – Players Activate their Units in ascending order of Unit Initiative.}\\
   \darkcell[1.4]{+1/0}
     & \lightcell[1.4]{Tail Wind – \svg{unit_flying-table} Units gain +1 Movement.}\\
-  \darkcell[1.4]{-1/-1}
+  \darkcell[1.4]{+1/+1}
     & \lightcell[1.4]{Perfect Conditions – All \svg{unit_ranged-table} Units gain advantage.}\\
   \end{tabularx}
 }
