--- a/draft-scenarios/clash/king_of_the_hill.tex
+++ b/draft-scenarios/clash/king_of_the_hill.tex
@@ -46,8 +46,8 @@ The game ends at the end of Round 8.
 \subsection*{\MakeUppercase{Victory Points}}
 The player with the most Victory Points (VP) wins (see Tournament Book). Players also gain:
 \begin{itemize}
-  \item 5VP for the first player flagging ''The Hill''
-  \item 2VP at the end of every Round for the player who controls ''The Hill''
+  \item 5VP for the first player flagging ``The Hill''
+  \item 2VP at the end of every Round for the player who controls ``The Hill''
   \item 1VP for losing a Combat against another player
 \end{itemize}
 
